--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYpE html>
 <html lang="en">
 
 <head>
@@ -31,8 +31,35 @@
                 <img src="/Tennis/assets/svg/vk.svg" alt="vk">
             </div>
         </header>
-
+        <h1 class="header-title">Петербургский<br> теннисный клуб<br> имени М.А. Пасечникова</h1>
+        <div class="youtube-chanell">
+            <img src="/Tennis/assets/svg/watch_youtube.svg" alt="watch_youtube">
+            <p class="chanell">Посмотрите видео<br> о нашеи клубе</p>
+        </div>
+        <div class="header-bottom">
+            <div class="header-footer">
+                <p class="type">Услуги</p>
+                <p class="type_of_service">Аренда корта</p>
+                <img src="/Tennis/assets/svg/link.svg" alt="link">
+            </div>
+            <div class="header-footer">
+                <p class="type">Услуги</p>
+                <p class="type_of_service">Детский теннис</p>
+                <img src="/Tennis/assets/svg/link.svg" alt="link">
+            </div>
+            <div class="header-footer">
+                <p class="type">Услуги</p>
+                <p class="type_of_service">Сборы команд</p>
+                <img src="/Tennis/assets/svg/link.svg" alt="link">
+            </div>
+            <div class="header-footer">
+                <p class="type">Турниры</p>
+                <p class="type_of_service">Расписание</p>
+                <img class="link" src="/Tennis/assets/svg/link.svg" alt="link">
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
